fixtures/frontend/milestone-2/invalid/unresolved-names/main.aivi
type Text -> Text
func statusLabel = status =>
    status

value main = <Label text={statusLabel currentStatus} />
